--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "@sanity/icons": "^3.7.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.84.0",
-    "framer-motion": "^12.6.5",
+    "framer-motion": "^12.7.4",
     "motion": "^12.6.5",
-    "next": "15.3.0",
+    "next": "^15.3.0",
     "next-sanity": "^9.10.2",
-    "nodemailer": "^6.10.0",
-    "react": "^19.0.0",
+    "nodemailer": "^6.10.1",
+    "react": "^19.1.0",
     "react-confetti": "^6.4.0",
     "react-countup": "^6.5.3",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-parallax-tilt": "^1.7.287",
