Contact form functionality and email integration added

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.84.0",
     "framer-motion": "^12.9.2",
+    "icons": "^1.0.0",
     "motion": "^12.6.5",
     "next": "^15.3.0",
     "next-sanity": "^9.10.2",
