--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-confetti": "^6.4.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.2",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-parallax-tilt": "^1.7.287",
